--- a/templates/register.html
+++ b/templates/register.html
@@ -7,6 +7,7 @@
     <title>Register</title>
     <!-- Link to the CSS file -->
     <link rel="stylesheet" href="/static/css/styles.css">
+    <script defer src="/static/js/scripts.js"></script> <!-- Link to external JS -->
 </head>
 <body class="login-page">
 
@@ -53,4 +54,4 @@
     </div>
 
 </body>
-</html>
+</html> 
